fixup! comment: Show highlighted comment

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2890,9 +2890,9 @@ label.inline-list {
 
             &:target {
                 .media-body {
-                  border: 2px solid #2196f3;
+                  border: 2px solid #03a9f4;
                     &::before {
-                        border-color: #2196f3;
+                        border-color: #03a9f4;
                         border-width: 0 0 2px 2px;
                     }
                 }
