--- a/app/views/common/editor.scala.html
+++ b/app/views/common/editor.scala.html
@@ -33,6 +33,9 @@
             <a href="#preview-@wrapId" data-toggle="tab" data-mode="preview">@Messages("common.editor.preview")</a>
         </li>
         <li>
+            <div class="task-list-button"><button type="button" class="add-task-list-button ybtn ybtn-mini ybtn-danger">Add Task List</button></div>
+        </li>
+        <li>
             <div class="editor-notice-label"></div>
         </li>
     </ul>
