--- a/app/views/help/markdown.scala.html
+++ b/app/views/help/markdown.scala.html
@@ -1,22 +1,8 @@
 @**
-* Yobi, Project Hosting SW
+* Yona, 21st Century Project Hosting SW
 *
-* Copyright 2013 NAVER Corp.
-* http://yobi.io
-*
-* @author Suwon Chae
-*
-* Licensed under the Apache License, Version 2.0 (the "License");
-* you may not use this file except in compliance with the License.
-* You may obtain a copy of the License at
-*
-*   http://www.apache.org/licenses/LICENSE-2.0
-*
-* Unless required by applicable law or agreed to in writing, software
-* distributed under the License is distributed on an "AS IS" BASIS,
-* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-* See the License for the specific language governing permissions and
-* limitations under the License.
+* Copyright Yona & Yobi Authors & NAVER Corp. & NAVER LABS Corp.
+* https://yona.io
 **@
 <div class="markdown-help">
     <ul class="markdown-help-nav">
@@ -28,6 +14,7 @@
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownHeaders">Headers</li>
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownLinks">Links</li>
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownLists">Lists</li>
+        <li class="help-nav" data-toggle="markdown-help" data-target="markdownTaskList">TaskList</li>
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownImages">Images</li>
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownBlockquotes">Blockquotes</li>
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownCodes">Codes</li>
@@ -101,6 +88,36 @@ http://yobi.io/
     1. White
     2. Blue
 - Green
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="markdown-help-item markdownTaskList">
+            <div class="row-fluid thead">
+                <div class="span6">Markdown Input</div>
+                <div class="span6">Markdown Output</div>
+            </div>
+            <div class="row-fluid markdwon-syntax-wrap">
+                <div class="span6 markdwon-syntax">
+                    <pre>
+- [ ] Todos
+    - [x] To do A
+    - [ ] To do B
+    - [ ] To do C
+                    </pre>
+                </div>
+                <div class="span6">
+                    <div class="markdown-wrap">
+                        <ul>
+                            <li>
+                                <input type="checkbox"> Todos
+                                <ul>
+                                    <li><input type="checkbox" checked> To do A</li>
+                                    <li><input type="checkbox"> To do B</li>
+                                    <li><input type="checkbox"> To do C</li>
+                                </ul>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
