--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -160,10 +160,9 @@ code {
   }
 
   li > input[type='checkbox'] {
-    vertical-align: baseline;
-    position: relative;
+    vertical-align: text-top;
   }
-  
+
   img{
     max-width:100%;
     margin:10px 0;
