tasklist: Rename task list to checklist

--- a/app/views/help/markdown.scala.html
+++ b/app/views/help/markdown.scala.html
@@ -14,7 +14,7 @@
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownHeaders">Headers</li>
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownLinks">Links</li>
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownLists">Lists</li>
-        <li class="help-nav" data-toggle="markdown-help" data-target="markdownTaskList">TaskList</li>
+        <li class="help-nav" data-toggle="markdown-help" data-target="markdownTaskList">Checklist</li>
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownImages">Images</li>
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownBlockquotes">Blockquotes</li>
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownCodes">Codes</li>
