checklist: Fix carriage return related bug
At present, when to call val() on textarea elements,
it  strips carriage return characters by default.
https://stackoverflow.com/a/8601601/1450196

At first, I added hooks as like above link in the front page.
But I found that it introduce another problems,
wrong cursor location detection in textarea.

So, decided to calculate sha1 of content without \r char.

--- a/app/views/common/scripts.scala.html
+++ b/app/views/common/scripts.scala.html
@@ -179,7 +179,7 @@
         addTaskListButtonListener();
         function addTaskListButtonListener() {
             $(".add-task-list-button").on('click', function () {
-                var tasklistTemplate = "\n- [ ] Todo A\r\n- [ ] Todo B\r\n- [ ] Todo C";
+                var tasklistTemplate = "\n- [ ] Todo A\n- [ ] Todo B\n- [ ] Todo C";
                 var $textarea = $(this).closest("form").find("textarea");
                 var cursorPos = $textarea.prop('selectionStart');
                 var text = $textarea.val();
@@ -193,6 +193,7 @@
 
                 $textarea.val(textBefore + tasklistTemplate + textAfter);
                 $textarea.focus();
+                $textarea.get(0).setSelectionRange(cursorPos + tasklistTemplate.length, cursorPos + tasklistTemplate.length);
             });
         }
 
