--- a/app/views/common/editor.scala.html
+++ b/app/views/common/editor.scala.html
@@ -33,7 +33,7 @@
             <a href="#preview-@wrapId" data-toggle="tab" data-mode="preview">@Messages("common.editor.preview")</a>
         </li>
         <li>
-            <div class="task-list-button"><button type="button" class="add-task-list-button ybtn ybtn-mini ybtn-danger">@Messages("button.add.checklist")</button></div>
+            <div class="task-list-button"><button type="button" class="add-task-list-button ybtn ybtn-small ybtn-danger-no-outline">@Messages("button.add.checklist")</button></div>
         </li>
         <li>
             <div class="editor-notice-label"></div>
