help: Update markdown table description

--- a/app/views/help/markdown.scala.html
+++ b/app/views/help/markdown.scala.html
@@ -212,6 +212,8 @@ function test() {
 | ------------ | :----------: | ------: |
 | Carrot       | Red          | 1,000   |
 | Banana       | Yellow       | 32,000  |
+
+Also, you can copy & paste table from excel sheet
                     </div>
                 </div>
             </div>
