checklist: Change add checklist button style

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -5547,7 +5547,7 @@ label.issue-item-row {
             &.help-nav {
                 cursor: pointer;
                 position: relative;
-                color:#788ba7;
+                color:#9e9e9e;
 
                 &:hover {
                     color:#333;
@@ -7329,6 +7329,10 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
 
 .task-list-button {
     margin-top: 2px;
+
+    button {
+        margin-top: 1px;
+    }
 }
 
 .tasklist {
