--- a/app/assets/stylesheets/less/_yobiUI.less
+++ b/app/assets/stylesheets/less/_yobiUI.less
@@ -844,15 +844,17 @@ span.issue-label {
     }
 
     &.ybtn-danger-no-outline {
-        border: none;
         font-weight: 600;
         box-shadow: none;
-        color: #ef5350;
-        background-color: transparent;
+        color: #666;
+        padding: 1px 10px !important;
+        border: 1px solid transparent;
+        background-color: #eee;
 
         &:hover, &:focus {
             color: @yobi-btn-danger;
-            background-color: #fbe9e7 !important;
+            background-color: #fbe9e7;
+            border: 1px solid #EF9A9A;
         }
     }
 
