help: Change markdown help menu ordering

--- a/app/views/help/markdown.scala.html
+++ b/app/views/help/markdown.scala.html
@@ -11,16 +11,16 @@
                 @Messages("title.markdown.help")
             </span>
         </li>
-        <li class="help-nav" data-toggle="markdown-help" data-target="markdownHeaders">Headers</li>
-        <li class="help-nav" data-toggle="markdown-help" data-target="markdownLinks">Links</li>
-        <li class="help-nav" data-toggle="markdown-help" data-target="markdownLists">Lists</li>
+        <li class="help-nav" data-toggle="markdown-help" data-target="markdownHeaders">Header</li>
+        <li class="help-nav" data-toggle="markdown-help" data-target="markdownStyling">Text Style</li>
+        <li class="help-nav" data-toggle="markdown-help" data-target="markdownLinks">Link</li>
+        <li class="help-nav" data-toggle="markdown-help" data-target="markdownLists">List</li>
         <li class="help-nav" data-toggle="markdown-help" data-target="markdownTaskList">Checklist</li>
-        <li class="help-nav" data-toggle="markdown-help" data-target="markdownImages">Images</li>
-        <li class="help-nav" data-toggle="markdown-help" data-target="markdownBlockquotes">Blockquotes</li>
-        <li class="help-nav" data-toggle="markdown-help" data-target="markdownCodes">Codes</li>
-        <li class="help-nav" data-toggle="markdown-help" data-target="markdownTables">Tables</li>
-        <li class="help-nav" data-toggle="markdown-help" data-target="markdownStyling">Styling</li>
-        <li class="help-nav" data-toggle="markdown-help" data-target="markdownShortLinks">Short Links</li>
+        <li class="help-nav" data-toggle="markdown-help" data-target="markdownImages">Image</li>
+        <li class="help-nav" data-toggle="markdown-help" data-target="markdownBlockquotes">Blockquote</li>
+        <li class="help-nav" data-toggle="markdown-help" data-target="markdownCodes">Code</li>
+        <li class="help-nav" data-toggle="markdown-help" data-target="markdownTables">Table</li>
+        <li class="help-nav" data-toggle="markdown-help" data-target="markdownShortLinks">Short Link</li>
     </ul>
     <ul class="markdown-help-wrap">
         <li class="markdown-help-item markdownHeaders">
@@ -41,6 +41,28 @@
 # This is an H1
 ## This is an H2
 ### This is an H3
+                    </div>
+                </div>
+            </div>
+        </li>
+        <li class="markdown-help-item markdownStyling">
+            <div class="row-fluid thead">
+                <div class="span6">Markdown Input</div>
+                <div class="span6">Markdown Output</div>
+            </div>
+            <div class="row-fluid markdwon-syntax-wrap">
+                <div class="span6 markdwon-syntax">
+<pre>
+*This is an italic*
+**This is an bold**
+~~This is an strike~~
+</pre>
+                </div>
+                <div class="span6">
+                    <div class="markdown-wrap"   markdown="true">
+*This is an italic*
+**This is an bold**
+~~This is an strike~~
                     </div>
                 </div>
             </div>
@@ -214,28 +236,6 @@ function test() {
 | Banana       | Yellow       | 32,000  |
 
 Also, you can copy & paste table from excel sheet
-                    </div>
-                </div>
-            </div>
-        </li>
-        <li class="markdown-help-item markdownStyling">
-            <div class="row-fluid thead">
-                <div class="span6">Markdown Input</div>
-                <div class="span6">Markdown Output</div>
-            </div>
-            <div class="row-fluid markdwon-syntax-wrap">
-                <div class="span6 markdwon-syntax">
-<pre>
-*This is an italic*
-**This is an bold**
-~~This is an strike~~
-</pre>
-                </div>
-                <div class="span6">
-                    <div class="markdown-wrap"   markdown="true">
-*This is an italic*
-**This is an bold**
-~~This is an strike~~
                     </div>
                 </div>
             </div>
