markdown: Change few css styles

--- a/app/assets/stylesheets/less/_markdown.less
+++ b/app/assets/stylesheets/less/_markdown.less
@@ -28,7 +28,7 @@ code {
   }
 
   ul, ol {
-    padding: 5px 0 5px 2.5em;
+    padding: 0 0 5px 2.5em;
     font-weight: normal;
     margin-left: 0;
   }
@@ -83,11 +83,11 @@ code {
   h2,
   h3 {
     line-height: 40px;
+    margin-bottom: 16px;
   }
 
   h1 {
     font-size: 2.0em;
-    margin-bottom: 15px;
     padding-bottom: 0.3em;
     border-bottom: 1px solid #eee;
     .anchor();
@@ -96,10 +96,10 @@ code {
   }
 
   h2 {
-    margin: 1em 0 5px;
+    line-height: 1.25;
     font-size: 1.5em;
     width: 95%;
-    padding: 0;
+    padding: 0 0 0.3em 0;
     border-bottom: 1px solid #eaecef;
     .anchor();
   }
@@ -133,7 +133,7 @@ code {
   }
 
   p {
-    margin: 10px 0;
+    margin: 0 0 16px 0;
     line-height: 1.6em;
   }
 
@@ -182,6 +182,7 @@ code {
   > ul {
     line-height: 20px;
     list-style: disc;
+    margin-bottom: 16px;
   }
 
   li {
